import { Column, Entity, JoinTable, ManyToMany } from 'typeorm';

import { DeepPartial } from '@myancommerce/nox-common';

import { MyanCommerceEntity } from '../../entity/base.entity';
import { Role } from '../../role/entities/role.entity';

/**
 * @description
 * A User represents any authenticated user of the MyanCommerce API. This includes both
 * {@link Administrator}s as well as registered {@link Customer}s.
 *
 * @docsCategory entities
 */
@Entity()
export class User extends MyanCommerceEntity {
    constructor(input?: DeepPartial<User>) {
        super(input);
    }

    @Column({ type: Date, nullable: true })
    deletedAt: Date | null;

    @Column({ type: String, nullable: true })
    identifier: string;

    @Column({ default: false })
    verified: boolean;

    @Column({ type: Date, nullable: true })
    lastLogin: Date | null;

    @ManyToMany(() => Role)
    @JoinTable()
    roles: Role[];
}
