//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "CometX" {
  database_type: 'PostgreSQL'
  Note: 'Online Commerce Platform'
}

Table Authentication {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  identifier String [unique, not null]
  method String [not null]
  passwordHash String [not null]
  verificationToken String [unique]
  passwordResetToken String [unique]
  identifierChangeToken String [unique]
  pendingIdentifier String [unique]
  user User
  userId String
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  identifier String [unique, not null]
  verified Boolean [not null, default: false]
  lastLogin DateTime
  authentication Authentication [not null]
  roles Role [not null]
  administrator Administrator
  customer Customer
  authenticatedSession AuthenticatedSession [not null]
}

Table Role {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String [unique, not null]
  description String [not null]
  user User [not null]
  permissions String [not null]
}

Table Administrator {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String [not null]
  lastName String [not null]
  emailAddress String [unique, not null]
  user User
  userId String [unique, not null]
}

Table Customer {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  title String [not null]
  firstName String [not null]
  lastName String [not null]
  phoneNumber String
  emailAddress String [unique, not null]
  user User
  userId String [unique, not null]
  addresses Address [not null]
}

Table Address {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fullName String [not null, default: '']
  company String [not null, default: '']
  streetLine1 String [not null]
  streetLine2 String [not null, default: '']
  city String [not null, default: '']
  province String [not null, default: '']
  postalCode String [not null, default: '']
  phoneNumber String [not null, default: '']
  defaultShippingAddress Boolean [not null, default: false]
  defaultBillingAddress Boolean [not null, default: false]
  country Country [not null]
  countryId String [not null]
  customer Customer
  customerId String [unique, not null]
}

Table Country {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  enabled Boolean [not null]
  code String [unique, not null]
  address Address [not null]
}

Table AuthenticatedSession {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  token String [unique, not null]
  expires DateTime [not null]
  invalidated Boolean [not null]
  authenticatedStrategy String [not null]
  user User [not null]
  userId String [not null]
}

Table AnonymousSession {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  token String [unique, not null]
  expires DateTime [not null]
  invalidated Boolean [not null]
}

Table RoleToUser {
  rolesId Int [ref: > Role.id]
  userId String [ref: > User.id]
}

Ref: Authentication.userId > User.id [delete: Cascade]

Ref: Administrator.userId - User.id [delete: Cascade]

Ref: Customer.userId - User.id [delete: Cascade]

Ref: Address.countryId > Country.id [delete: Cascade]

Ref: Address.customerId > Customer.id [delete: Cascade]

Ref: AuthenticatedSession.userId > User.id [delete: Cascade]